MDEV-26794 MariaBackup does not recognize added providers upon prepare of incremental backup

* Change InnoDB message text to mention compression.
* make "not loaded compression provider" warning to be issued
  also when current_thd == 0.